(feat): try to preload material icons

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,12 @@
     />
     <link
       rel="preload"
+      href="https://cdn-assets.minds.com/front/fonts/material-icons.css"
+      as="style"
+      crossorigin
+    />
+    <link
+      rel="preload"
       href="https://cdn-assets.minds.com/front/fonts/material-icons.woff2"
       as="font"
       type="font/woff2"
