--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,7 @@
   <head>
     <base href="/" />
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg" href="/en/assets/logos/bulb.svg" />
     <link
       rel="apple-touch-icon"
