--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,23 @@
       name="viewport"
       content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <link rel="icon" type="image/svg" href="/en/assets/logos/bulb.svg" />
+    <link rel="icon" type="image/svg" href="/static/en/assets/logos/bulb.svg" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/en/assets/logos/bulb-apple-touch-icon.png"
+      href="/static/en/assets/logos/bulb-apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/en/assets/logos/bulb-32x32.png"
+      href="/static/en/assets/logos/bulb-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/en/assets/logos/bulb-16x16.png"
+      href="/static/en/assets/logos/bulb-16x16.png"
     />
     <link
       rel="preload"
