Add service worker and web manifest

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"
     />
+    <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/svg" href="/static/en/assets/logos/bulb.svg" />
     <link
       rel="apple-touch-icon"
