--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,8 @@
       type="font/woff2"
       crossorigin
     />
-
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
     <style type="text/css">
       .m-app__loadingContainer {
         display: flex;
@@ -77,5 +78,9 @@
 
     <!-- shims:js -->
     <!-- endinject -->
+
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
   </body>
 </html>
