--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       crossorigin
     />
     <link rel="manifest" href="/static/en/manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#FED12F" />
     <style type="text/css">
       .m-app__loadingContainer {
         display: flex;
