--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       type="font/woff2"
       crossorigin
     />
-    <link rel="manifest" href="/static/en/manifest.webmanifest" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#FED12F" />
     <style type="text/css">
       .m-app__loadingContainer {
