--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,11 @@
       type="font/woff2"
       crossorigin
     />
+    <meta
+      name="theme-color"
+      content="#242a30"
+      media="(prefers-color-scheme: dark)"
+    />
     <link rel="manifest" href="/manifest.webmanifest" />
     <style type="text/css">
       .m-app__loadingContainer {
